objects/Log__c.object
<CustomObject>
    <description>To captures detailed information about exceptions and errors encountered in the system.</description>
    <fields>
        <fullName>ClassName__c</fullName>
        <label>ClassName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExceptionMessage__c</fullName>
        <label>Exception Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExceptionType__c</fullName>
        <label>Exception Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GovtLimitInExecutingCode__c</fullName>
        <label>Govt Limit In Executing Code</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LineNumber__c</fullName>
        <label>Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MethodName__c</fullName>
        <label>MethodName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordLink__c</fullName>
        <label>Record Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>RelatedToRecord__c</fullName>
        <label>Related To Record</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StackTrace__c</fullName>
        <label>StackTrace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Log</label>
    <nameField>
        <displayFormat>L-{0000000}</displayFormat>
        <label>Log #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>